# tungsten

./: Cargo.toml  PRD.md  README.md  ROADMAP.md
crates/cli/src/: main.rs
crates/paths/src/: paths.rs
crates/tungsten_workspace/: Cargo.toml
crates/tungsten_workspace/src/: attachments.rs  bases.rs  canvas.rs  dql.rs  eaar.rs  export.rs  graph.rs  index.rs  index_db.rs  inspector.rs  journal.rs  note.rs  note_parser.rs  notes_io.rs  obsidian_config.rs  outline.rs  panel.rs  plugin_api.rs  preview.rs  property.rs  publish.rs  quick_switcher.rs  rename.rs  search.rs  smart_folder.rs  snippet.rs  stats.rs  sync.rs  templates.rs  theme.rs  tungsten_workspace.rs  validate.rs  vault_sidecar.rs  watcher.rs  workspace.rs  yip.rs
crates/workspace/src/: workspace.rs
crates/zed/: Cargo.toml
crates/zed/resources/: tungsten.desktop.in
crates/zed/resources/flatpak/: manifest-template.json  tungsten.metainfo.xml.in
crates/zed/resources/snap/: snapcraft.yaml.in
crates/zed/src/: main.rs  tungsten_status.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
