[package]
name = "tungsten_workspace"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/tungsten_workspace.rs"

[features]
test-support = []

[dependencies]
anyhow.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
util.workspace = true

[[bin]]
name = "tungsten-vault"
path = "src/bin/tungsten_vault.rs"
