[package]
name = "tungsten_workspace"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/tungsten_workspace.rs"

[features]
test-support = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
util.workspace = true
walkdir.workspace = true

[[bin]]
name = "tungsten-vault"
path = "src/bin/tungsten_vault.rs"

[[bin]]
name = "tungsten-index"
path = "src/bin/tungsten_index.rs"

[[bin]]
name = "tungsten-query"
path = "src/bin/tungsten_query.rs"

[[bin]]
name = "tungsten-init"
path = "src/bin/tungsten_init.rs"

[[bin]]
name = "tungsten-rename"
path = "src/bin/tungsten_rename.rs"
