[package]
name = "tungsten_workspace"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/tungsten_workspace.rs"

[features]
test-support = []

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
log.workspace = true
notify.workspace = true
pulldown-cmark = { workspace = true, features = ["html"] }
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
util.workspace = true
walkdir.workspace = true

[[bin]]
name = "tungsten-vault"
path = "src/bin/tungsten_vault.rs"

[[bin]]
name = "tungsten-index"
path = "src/bin/tungsten_index.rs"

[[bin]]
name = "tungsten-query"
path = "src/bin/tungsten_query.rs"

[[bin]]
name = "tungsten-init"
path = "src/bin/tungsten_init.rs"

[[bin]]
name = "tungsten-rename"
path = "src/bin/tungsten_rename.rs"

[[bin]]
name = "tungsten-backlinks"
path = "src/bin/tungsten_backlinks.rs"

[[bin]]
name = "tungsten-grep"
path = "src/bin/tungsten_grep.rs"

[[bin]]
name = "tungsten-find-broken"
path = "src/bin/tungsten_find_broken.rs"

[[bin]]
name = "tungsten-canvas"
path = "src/bin/tungsten_canvas.rs"

[[bin]]
name = "tungsten-publish"
path = "src/bin/tungsten_publish.rs"

[[bin]]
name = "tungsten-encrypt"
path = "src/bin/tungsten_eaar.rs"

[[bin]]
name = "tungsten-decrypt"
path = "src/bin/tungsten_eaar.rs"

[[bin]]
name = "tungsten-graph"
path = "src/bin/tungsten_graph.rs"

[[bin]]
name = "tungsten-switcher"
path = "src/bin/tungsten_switcher.rs"

[[bin]]
name = "tungsten-outline"
path = "src/bin/tungsten_outline.rs"

[[bin]]
name = "tungsten-inspect"
path = "src/bin/tungsten_inspect.rs"

[[bin]]
name = "tungsten-plugins"
path = "src/bin/tungsten_plugins.rs"

[[bin]]
name = "tungsten-themes"
path = "src/bin/tungsten_themes.rs"

[[bin]]
name = "twctl"
path = "src/bin/tungsten.rs"

[[bin]]
name = "tungsten-sync"
path = "src/bin/tungsten_sync.rs"

[[bin]]
name = "tungsten-yip"
path = "src/bin/tungsten_yip.rs"

[[bin]]
name = "tungsten-smart"
path = "src/bin/tungsten_smart.rs"

[[bin]]
name = "tungsten-templates"
path = "src/bin/tungsten_templates.rs"

[[bin]]
name = "tungsten-export"
path = "src/bin/tungsten_export.rs"

[[bin]]
name = "tungsten-validate"
path = "src/bin/tungsten_validate.rs"

[[bin]]
name = "tungsten-stats"
path = "src/bin/tungsten_stats.rs"

[[bin]]
name = "tungsten-shell"
path = "src/bin/tungsten_shell.rs"

[[bin]]
name = "tungsten-graph-viz"
path = "src/bin/tungsten_graph_viz.rs"

[[bin]]
name = "tungsten-diff"
path = "src/bin/tungsten_diff.rs"
